--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cargo/registry/index
-          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-index-${{ hashFiles(format('{0}/Cargo.lock', github.workspace)) }}
+          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-index
 
       - name: Cache cargo build
         uses: actions/cache@v4
@@ -48,9 +48,9 @@ jobs:
             ~/.cargo/registry/cache
             ~/.cargo/git/db
             target
-          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-build-${{ hashFiles(format('{0}/Cargo.lock', github.workspace)) }}
+          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-build
           restore-keys: |
-            ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-build-
+            ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-build
 
       - name: Run rustfmt
         run: cargo fmt --all --check
@@ -89,9 +89,9 @@ jobs:
             ~/.cargo/registry/cache
             ~/.cargo/git/db
             target
-          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-${{ hashFiles(format('{0}/Cargo.lock', github.workspace)) }}
+          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo
           restore-keys: |
-            ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo-
+            ${{ runner.os }}-${{ env.CACHE_VERSION }}-cargo
 
       - name: Run unit tests
         run: cargo test --verbose --workspace --features cli
@@ -205,9 +205,9 @@ jobs:
             ~/.cargo/registry/cache
             ~/.cargo/git/db
             target
-          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-py${{ matrix.python-version }}-${{ hashFiles(format('{0}/Cargo.lock', github.workspace)) }}
+          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-py${{ matrix.python-version }}
           restore-keys: |
-            ${{ runner.os }}-${{ env.CACHE_VERSION }}-py${{ matrix.python-version }}-
+            ${{ runner.os }}-${{ env.CACHE_VERSION }}-py${{ matrix.python-version }}
 
       - name: Create virtualenv
         run: python -m venv .venv
@@ -252,7 +252,7 @@ jobs:
           path: |
             ~/.cargo/registry/index
             sea-core/target
-          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-ts-${{ hashFiles(format('{0}/Cargo.lock', github.workspace)) }}
+          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-ts
 
       - name: Install dependencies
         run: npm ci
@@ -345,9 +345,9 @@ jobs:
             ~/.cargo/registry/cache
             ~/.cargo/git/db
             target
-          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-wasm-${{ hashFiles(format('{0}/Cargo.lock', github.workspace)) }}
+          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-wasm
           restore-keys: |
-            ${{ runner.os }}-${{ env.CACHE_VERSION }}-wasm-
+            ${{ runner.os }}-${{ env.CACHE_VERSION }}-wasm
 
       - name: Install wasm-pack
         run: cargo install wasm-pack --locked
