--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -220,9 +220,9 @@ jobs:
             ~/.cargo/registry/cache
             ~/.cargo/git/db
             target
-          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-wasm-${{ hashFiles(format('{0}/Cargo.lock', github.workspace)) }}
+          key: ${{ runner.os }}-${{ env.CACHE_VERSION }}-wasm
           restore-keys: |
-            ${{ runner.os }}-${{ env.CACHE_VERSION }}-wasm-
+            ${{ runner.os }}-${{ env.CACHE_VERSION }}-wasm
 
       - name: Install wasm-pack
         run: cargo install wasm-pack --locked
