--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -383,3 +383,6 @@ jobs:
 
       - name: Run cargo audit
         uses: rustsec/audit-check@v1
+        continue-on-error: true
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
