--- a/sea-core/Cargo.toml
+++ b/sea-core/Cargo.toml
@@ -33,6 +33,7 @@ roxmltree = "0.21.1"
 oxigraph = { version = "0.3", optional = true }
 clap = { version = "4.5", features = ["derive"], optional = true }
 colored = { version = "2.0", optional = true }
+anyhow = "1.0.100"
 
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
